[package]
name = "cronista"
version = "0.24.52"
description = "a authenticated log for Chrome OS."
authors = ["The Chromium OS Authors"]
edition = "2018"

[profile.release]
panic = "abort"
overflow-checks = true

[dependencies]
anyhow = "1.0.0"
getopts = "0.2"
libchromeos = { path = "../libchromeos-rs", features = ['chromeos-module'] } # provided by ebuild
libsirenia = { path = "../sirenia/libsirenia" } # provided by ebuild
sys_util = { path = "../../platform/crosvm/common/sys_util" } # provided by ebuild
thiserror = "1.0.20"
