[package]
name = "crosh"
version = "0.24.52"
authors = ["The ChromiumOS Authors"]
edition = "2018"

[profile.release]
panic = "abort"
overflow-checks = true

[lib]
name = "crosh"

[[bin]]
name = "crosh"

[dependencies]
bitflags = "1.3.2"
chrono = "0.4"
dbus = { version = "0.9.7", features = ["stdfd"] }
getopts = "0.2"
libc = "0.2.44"
libchromeos = { path = "../libchromeos-rs", features = ['chromeos-module'] } # provided by ebuild
log = "0.4"
nix = { version = "0.26", features = ["signal"] }
protobuf = "3.2"
rand = "0.7"
remain = "*"
regex = "1.0.6"
rustyline = "9.1.1"
metrics_rs = { path = "../metrics/rust-client" } # provided by ebuild
shell-words = "1.0.0"
signal-hook-registry = "*"
system_api = { path = "../system_api" } # provided by ebuild
textwrap = "0.11.0"
tlsdate_dbus = { path = "../../third_party/tlsdate" } # provided by ebuild

[dev-dependencies]
tempfile = "3.2.0"
